objects/Junction_Kbase__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Junction Kbases</relationshipLabel>
        <relationshipName>Sub_Kbases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>Case__r.Opportunity_Name__r.Contract_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_II_Assigned_Date__c</fullName>
        <label>DI-II Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-II Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_II_Completion_Date__c</fullName>
        <label>DI-II Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Duration__c</fullName>
        <formula>DI_II_Completion_Date__c -  DI_II_Assigned_Date__c + 1</formula>
        <label>DI-II Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_II_Fix_Check_Assigned_Date__c</fullName>
        <label>DI-II Fix Check Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Fix_Check_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-II Fix Check Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_II_Fix_Check_Completion_Date__c</fullName>
        <label>DI-II Fix Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Fix_Check_Duration__c</fullName>
        <formula>DI_II_Fix_Check_Completion_Date__c -  DI_II_Fix_Check_Assigned_Date__c + 1</formula>
        <label>DI-II Fix Check Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_II_Fixes_Assigned_Date__c</fullName>
        <label>DI-II Fixes Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Fixes_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-II Fixes Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_II_Fixes_Completion_Date__c</fullName>
        <label>DI-II Fixes Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Fixes_Duration__c</fullName>
        <formula>DI_II_Fixes_Completion_Date__c - DI_II_Fixes_Assigned_Date__c + 1</formula>
        <label>DI-II Fixes Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_II_Reference_Status__c</fullName>
        <label>DI-II Reference Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reference_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_II_Work_Type__c</fullName>
        <label>DI-II Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial DI-II</fullName>
                </value>
                <value>
                    <fullName>Secondary DI-II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_I_Assigned_Date__c</fullName>
        <label>DI-I Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-I Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_I_Completion_Date__c</fullName>
        <label>DI-I Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Duration__c</fullName>
        <formula>DI_I_Completion_Date__c - DI_I_Assigned_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DI-I Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_I_Fix_Check_Assigned_Date__c</fullName>
        <label>DI-I Fix Check Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Fix_Check_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-I Fix Check Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_I_Fix_Check_Completion_Date__c</fullName>
        <label>DI-I Fix Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Fix_Check_Duration__c</fullName>
        <formula>DI_I_Fix_Check_Completion_Date__c - DI_I_Fix_Check_Assigned_Date__c + 1</formula>
        <label>DI-I Fix Check Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_I_Fixes_Assigned_Date__c</fullName>
        <label>DI-I Fixes Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Fixes_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DI-I Fixes Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_I_Fixes_Completion_Date__c</fullName>
        <label>DI-I Fixes Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Fixes_Duration__c</fullName>
        <formula>DI_I_Fixes_Completion_Date__c - DI_I_Fixes_Assigned_Date__c + 1</formula>
        <label>DI-I Fixes Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_I_Reference_Status__c</fullName>
        <label>DI-I Reference Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reference_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_I_Work_Type__c</fullName>
        <label>DI-I Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial DI-I</fullName>
                </value>
                <value>
                    <fullName>Secondary DI-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Name__c</fullName>
        <formula>Case__r.Database_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Database Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extraction_Assigned_Date__c</fullName>
        <label>Extraction Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extraction_Assignee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extraction Assignee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extraction_Completion_Date__c</fullName>
        <label>Extraction Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extraction_Duration__c</fullName>
        <formula>Extraction_Completion_Date__c - Extraction_Assigned_Date__c + 1</formula>
        <label>Extraction Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_Quantity__c</fullName>
        <formula>Kbases__r.Extraction_Quantity__c</formula>
        <label>Extraction Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_Reference_Status__c</fullName>
        <label>Extraction Reference Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reference_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extraction_Task_Description__c</fullName>
        <label>Extraction Task Description</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tables</fullName>
                </value>
                <value>
                    <fullName>Term Index</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extraction_Work_Type__c</fullName>
        <label>Extraction Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Extraction</fullName>
                </value>
                <value>
                    <fullName>Secondary Extraction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kbases_Name__c</fullName>
        <formula>Kbases__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kbases Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kbases__c</fullName>
        <label>Ref ID</label>
        <referenceTo>Kbase__c</referenceTo>
        <relationshipLabel>Junction Kbases</relationshipLabel>
        <relationshipName>Sub_Kbases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LMS_Bucket__c</fullName>
        <label>LMS Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meth_Rep_1__c</fullName>
        <formula>TEXT(Case__r.Meth_Rep_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meth Rep #1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meth_Rep_2__c</fullName>
        <formula>TEXT(Case__r.Meth_Rep_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meth Rep #2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Case__r.Opportunity_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PICO_ID__c</fullName>
        <formula>Case__r.PICO_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PICO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Release_Date__c</fullName>
        <formula>TEXT(Case__r.Production_Release_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Release Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <formula>Kbases__r.Name</formula>
        <label>Ref ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>Case__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slack_URL__c</fullName>
        <label>Slack URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TaskRay_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Sub-Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Project must be a sub-project.</errorMessage>
            <filterItems>
                <field>TASKRAY__Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub-Project</value>
            </filterItems>
            <infoMessage>Please select a sub-project.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Junction Kbases</relationshipLabel>
        <relationshipName>Junction_Kbases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Lead Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Junction_Kbases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Virtual_Tag__c</fullName>
        <label>Virtual Tag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tag 1</fullName>
                </value>
                <value>
                    <fullName>Tag 2</fullName>
                </value>
                <value>
                    <fullName>Tag 3</fullName>
                </value>
                <value>
                    <fullName>Tag 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_on__c</fullName>
        <label>Waiting on...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grab-it</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Meth Rep Decision Pending</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>TL Decision Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Junction Kbase</label>
    <nameField>
        <label>Case to Ref ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junction Kbases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>